@@ -519,6 +519,9 @@ UPDATE `item_template` SET `Flags`=2048 WHERE `entry`=4898;
 -- Sack of Supplies (Quest: Winds in the Desert (Id: 834))
 UPDATE `item_template` SET `Flags`=2048 WHERE `entry`=4918;
 
+-- Fungal Spores (Quest: Fungal Spores (Id: 848))
+UPDATE `item_template` SET `Flags`=2048 WHERE `entry`=5012;
+
 -- Nitroglycerin (Quest: Revenge of Gann (Id: 846))
 UPDATE `item_template` SET `Flags`=2048 WHERE `entry`=5017;
 
